--- a/product.dao/src/test/resources/application.properties
+++ b/product.dao/src/test/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://rm-bp1w5en9918a53zt2xo.mysql.rds.aliyuncs.com:3306/product
-spring.datasource.username=test
-spring.datasource.password=Qgt123456
+spring.datasource.url=jdbc:mysql://rm-bp14l7ao2jr2334t0so.mysql.rds.aliyuncs.com/product
+spring.datasource.username=wangymm
+spring.datasource.password=8656098694416Wym
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 mybatis.mapper-locations=classpath*:com/qingguatang/*/dao/*.xml
 logging.level.root=ERROR
 
