--- a/product.service/pom.xml
+++ b/product.service/pom.xml
@@ -44,6 +44,11 @@
       <version>${mybatis-spring-boot-version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.qingguatang</groupId>
+      <artifactId>product.api</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
 </project>
